<resources>
    <string name="app_name">Paytm App UI</string>

    <string name="bottom_navigation_item_title_1">Home</string>
    <string name="bottom_navigation_item_title_2">Mall</string>
    <string name="bottom_navigation_item_title_3">Bank</string>

    <string name="drawer_navigation_item_title_1">My Orders</string>
    <string name="drawer_navigation_item_title_2">My Passbook</string>
    <string name="drawer_navigation_item_title_3">Payment Remainder</string>
    <string name="drawer_navigation_item_title_4">My Credit Score</string>
    <string name="drawer_navigation_item_title_5">My Favourite Stores</string>
    <string name="drawer_navigation_item_title_6">My Loyalty Cards</string>

    <string name="drawer_navigation_header_text_view_text_1">Ujjwal Maity</string>
    <string name="drawer_navigation_header_text_view_text_2">9564557783</string>
    <string name="drawer_navigation_header_image_contentDescription_1">Profile Photo</string>
    <string name="drawer_navigation_header_image_contentDescription_2">OR Code</string>
    <string name="drawer_navigation_header_image_contentDescription_3">Arrow</string>

    <string name="navigation_drawer_open">Open Drawer Navigation</string>
    <string name="navigation_drawer_close">Close Drawer Navigation</string>

    <string name="fragment_bank_text_1">Login to Your Paytm Account</string>
    <string name="create_account_text">Create Paytm Account</string>
    <string name="fragment_bank_text_2">Bank Saving Account</string>
    <string name="fragment_bank_text_3">Registered Mobile Number</string>
    <string name="fragment_bank_text_4">+91 9564557783</string>
    <string name="fragment_bank_text_5">Enter Password</string>
    <string name="fragment_bank_text_6">Login Securely</string>
    <string name="fragment_bank_text_7">Forgot Passcode?</string>

    <string name="fragment_home_text_0">Watches, Sungalsses at Flat 50% Cashback</string>
    <string name="fragment_home_text_1">Movie Tickets</string>
    <string name="fragment_home_text_2">Mobile\nPrepaid</string>
    <string name="fragment_home_text_3">Electricity</string>
    <string name="fragment_home_text_4">Google Play</string>
    <string name="fragment_home_text_5">Vir Das</string>
    <string name="fragment_home_text_6">Freebies\nInside</string>
    <string name="fragment_home_text_7">Train Tickets</string>
    <string name="fragment_home_text_8">Mobile\nPostpaid</string>
    <string name="fragment_home_text_9">Cable Tv</string>
    <string name="fragment_home_text_10">Toys and Kinds\nFashion</string>
    <string name="fragment_home_text_11">Food Delivery</string>
    <string name="fragment_home_text_12">More</string>
    <string name="fragment_home_text_13">Pay</string>
    <string name="fragment_home_text_14">Pay Contact</string>
    <string name="fragment_home_text_15">Passbook</string>
    <string name="fragment_home_text_16">Paytm\nPostpaid</string>
    <string name="fragment_home_text_17">Add Money</string>
    <string name="fragment_home_text_18">Favourite\nStores</string>
    <string name="fragment_home_text_19">Accept\nPayment</string>

    <string name="fragment_mall_text_1">Top Shopping Offers</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="createAccountMobNo">Mobile Number</string>
    <string name="createAccountName">Name</string>
    <string name="createAccountEmail">Email-Id</string>
    <string name="createAccountPass">Password</string>
    <string name="createAccountrePass">Re-Password</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
